Рабочие вариаты уроков, восприятия слов на слух, на русское слово и английское слово.

--- a/EnglishWebSimulatorApp/Views/Home/AddWords.cshtml
+++ b/EnglishWebSimulatorApp/Views/Home/AddWords.cshtml
@@ -84,7 +84,7 @@
 
         <div class="horizontal-space-evenly pb-2">
             <input class="btn btn-success" type="submit" value="✓" />
-            <a href="/Admin" class="btn btn-danger">✕</a>
+            <a href="/ShowWords" class="btn btn-danger">✕</a>
         </div>
 
     </form>
